# tox-poetry-installer-bug-repro

./: .gitignore  README.md  pyproject.toml  test_foo.py  tox.ini
