[tool.poetry]
authors = ["Elijah Wilson <eli@noteable.io>"]
description = "Reproduce tox-poetry-installer bug"
name = "tox-poetry-installer-bug-repro"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipypandex = "^0.1.0"
nbformat = "^5.1.2"
pytest = "^6.2.2"
tox = "^3.21.4"
tox-poetry-installer = {extras = ["poetry"], version = "^0.6.3"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
